# TemperedHMC

./: .gitignore  51_pegasi_256.txt  CMakeLists.txt  README.md
hamiltonian_monte_carlo/: CMakeLists.txt
hamiltonian_monte_carlo/include/: effective_sample_size.h  geometric_tempered_hamiltonian.inl  hamiltonian.inl  hamiltonian_monte_carlo.inl  look_ahead_sampler.inl  markov_chain_monte_carlo.inl  mcmc_diagnostics.h  model.inl  no_u_turn_sampler.inl  parameter_set.inl  simple_hamiltonian.inl  trajectory_tempered_hamiltonian.inl
hamiltonian_monte_carlo/src/: effective_sample_size.cc  mcmc_diagnostics.cc
include/: exoplanet_model.h  gaussian_model.h  lennard_jones_model.h  lennard_jones_model.inl  point.inl  poisson_generator.inl
src/: exoplanet_model.cc  gaussian_model.cc  main.cc
tests/: CMakeLists.txt  exoplanet_test.cc
